demo/demo_03/grammar.txt

Program             => Statement *

Statement           => Expression

Expression          => AdditiveExpr
AdditiveExpr        => MultiplicativeExpr ( ('+' | '-') MultiplicativeExpr )*
MultiplicativeExpr  => UnaryExpr ( ('*' | '/') UnaryExpr )*
UnaryExpr           => '-'? PrimaryExpr
PrimaryExpr         => Literal | '(' Expression ')'

Literal             => Number | ...
